RESOLVED FIXED128944
SelectorCompiler incorrectly saves a backtracking register for a child chain without descendant relation on the right
https://bugs.webkit.org/show_bug.cgi?id=128944
Summary SelectorCompiler incorrectly saves a backtracking register for a child chain ...
Benjamin Poulain
Reported 2014-02-17 16:56:15 PST
SelectorCompiler incorrectly saves a backtracking register for a child chain without descendant relation on the right
Attachments
Patch (6.66 KB, patch)
2014-02-17 17:04 PST, Benjamin Poulain
kling: review+
Benjamin Poulain
Comment 1 2014-02-17 17:04:36 PST
Andreas Kling
Comment 2 2014-02-17 19:22:31 PST
Comment on attachment 224448 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=224448&action=review r=me > Source/WebCore/ChangeLog:19 > + is seen. There was no need to fix the Adjancent relation because adjacentPositionSinceIndirectAdjacentTreeWalk already typo, adjacent
Benjamin Poulain
Comment 3 2014-02-17 20:04:55 PST
Note You need to log in before you can comment on or make changes to this bug.